tests/snapshots/examples_fixtures/io__aoc_day11_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day11_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/io/aoc_day11_haskell_style.flx:133:1
    |
133 | let lines = read_lines("examples/io/aoc_day11.txt")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | --------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/io/aoc_day11_haskell_style.flx:133:1
    |
133 | let lines = read_lines("examples/io/aoc_day11.txt")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | --------------------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/io/aoc_day11_haskell_style.flx:136:1
    |
136 | print(day11a(graph))
    | ^^^^^^^^^^^^^^^^^^^^
    | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/io/aoc_day11_haskell_style.flx:137:1
    |
137 | print(day11b(graph))
    | ^^^^^^^^^^^^^^^^^^^^
    | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 4 errors.
== stdout ==
<not executed>
