tests/snapshots/examples_fixtures/io__aoc_day12_refactored.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day12_refactored.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
